cambios para probar github, añadí un párrafo

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Este es el curso de prework para configuraciones antes de los
         demás cursos de la escuela de javascript
     </p>
+    <p> Cambio número 2 para probar lo de github y ver qué pasa</p>
 </body>
 </html>
